--- a/assets/css/deatils/product.css
+++ b/assets/css/deatils/product.css
@@ -1,16 +1,19 @@
 @keyframes circleEffect {
-	0% {
-		opacity: 1;
-	}
-	40% {
-		opacity: 1;
-	}
-	100% {
-		width: 200%;
-		height: 200%;
-		opacity: 0;
-	}
+    0% {
+        opacity: 1;
+    }
+
+    40% {
+        opacity: 1;
+    }
+
+    100% {
+        width: 200%;
+        height: 200%;
+        opacity: 0;
+    }
 }
+
 #product {
     display: flex;
     flex-direction: row;
@@ -27,32 +30,45 @@
 
 /* Shine */
 
-.example > .block::before {
-	position: absolute;
-	top: -1.8rem;
-	left: 8rem;
-	z-index: 2;
-	display: block;
-	content: '';
-	width: 3rem;
-	height: 30%;
-	background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
-	background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
-	transform: skewY(-15deg) rotate(95deg);
+.example>.block::before {
+    position: absolute;
+    top: 1.5rem;
+    left: -2rem;
+    z-index: 2;
+    display: block;
+    content: '';
+    width: 90%;
+    height: 3rem;
+    background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, .3) 100%);
+    background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, .3) 100%);
+    transform: perspective(100rem) skewY(9deg);
+    overflow-x: hidden;
 }
-.example > .block:nth-child(2):before {
-	top: -2rem;
-	left: 11rem;
-	width: 2rem;
-	height: 33%;
+
+.example>.block:nth-child(2):before {
+    top: 2rem;
+    left: -3rem;
+    width: 91%;
+    height: 4rem;
+    transform: perspective(100rem) skewY(11deg);
 }
-.example > .block:hover::before {
-	animation: shine .75s;
+
+.example>.block:hover::before {
+    animation: shine .75s;
 }
+
 @keyframes shine {
-	100% {
-		top: 80%;
-	}
+
+
+
+    80% {
+        top: 90%;
+        transform: skewY(0deg) rotateY(30deg)
+    }
+
+    100% {
+        opacity: 0;
+    }
 }
 
 .example {
@@ -61,73 +77,86 @@
     height: 100%;
     padding-top: 1rem;
     margin: 2rem auto;
-  }
-  .example > .block {
+}
+
+.example>.block {
     position: absolute;
     height: 100%;
     width: 40%;
     perspective: 100rem;
-  }
-  .example > .block:nth-of-type(1) {
+}
+
+.example>.block:nth-of-type(1) {
     height: 80%;
     top: 10%;
     left: 0%;
     width: 30%;
-  }
-  .example > .block:nth-of-type(2) {
+}
+
+.example>.block:nth-of-type(2) {
     top: 0;
     left: 31%;
-  }
-  .example > .block:nth-of-type(3) {
+}
+
+.example>.block:nth-of-type(3) {
     height: 80%;
     top: 10%;
     right: 1%;
     width: 30%;
-  }
-  .example > .block > .side {
+}
+
+.example>.block>.side {
     position: absolute;
     top: 0;
     left: 0;
     background-image: url(../../images/details/images-item-details.jpg);
     background-size: auto 100%;
     box-shadow: -1vw 0.5vw 1vw rgba(0, 0, 0, 0.3);
-  }
-  .example > .block > .side.-main {
+}
+
+.example>.block>.side.-main {
     height: 100%;
     width: 100%;
     transform: rotateY(30deg);
     transform-origin: 0 50%;
-  }
-  .example > .block > .side.-left {
+}
+
+.example>.block>.side.-left {
     height: 100%;
     width: 20%;
     transform-origin: 0 50%;
     transform: rotateY(-60deg) translateX(-100%);
     filter: brightness(40%);
-  }
-  .example > .block:nth-of-type(1) > .side.-main {
+}
+
+.example>.block:nth-of-type(1)>.side.-main {
     background-position: 4% 50%;
     background-size: auto 130%;
-  }
-  .example > .block:nth-of-type(1) > .side.-left {
+}
+
+.example>.block:nth-of-type(1)>.side.-left {
     background-position: 0 50%;
     background-size: auto 130%;
-  }
-  .example > .block:nth-of-type(2) > .side.-main {
+}
+
+.example>.block:nth-of-type(2)>.side.-main {
     background-position: 50% 0;
-  }
-  .example > .block:nth-of-type(2) > .side.-left {
+}
+
+.example>.block:nth-of-type(2)>.side.-left {
     background-position: 28.5% 0;
-  }
-  .example > .block:nth-of-type(3) > .side.-main {
+}
+
+.example>.block:nth-of-type(3)>.side.-main {
     background-position: 96% 50%;
     background-size: auto 130%;
-  }
-  .example > .block:nth-of-type(3) > .side.-left {
+}
+
+.example>.block:nth-of-type(3)>.side.-left {
     background-position: 78% 50%;
     background-size: auto 130%;
-  }
-  
+}
+
 
 .product__right {
     padding-left: 5rem;
@@ -253,24 +282,27 @@
     width: 5rem;
     position: relative;
 }
+
 .person__left::before {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	z-index: 50;
-	display: block;
-	content: '';
-	width: 2rem;
-	height: 2rem;
-	background: rgba(255,255,255,.2);
-	border-radius: 100%;
-	-webkit-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
-	 opacity: 0; 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 50;
+    display: block;
+    content: '';
+    width: 2rem;
+    height: 2rem;
+    background: rgba(255, 255, 255, .2);
+    border-radius: 100%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    opacity: 0;
 }
-.person__left:hover:before{
+
+.person__left:hover:before {
     animation: circleEffect .3s;
 }
+
 .person__left:hover {
     transform: scale(1.3);
     border-radius: var(--border-raduis-3xl);
@@ -358,6 +390,7 @@
     transition: all 0.3s ease;
     background-color: var(--color-primary);
 }
+
 .product__button:hover {
     color: var(--color-ordinary);
     transition: all 0.3s ease;
@@ -380,7 +413,8 @@
     width: 100%;
     background-color: var(--color-primary);
 }
-.extra__title{
+
+.extra__title {
     display: flex;
     flex-direction: row;
     width: 90%;
@@ -395,10 +429,11 @@
     background-color: var(--color-secondary);
 }
 
-.show-tab{
+.show-tab {
     opacity: 1 !important;
     transition: opacity .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
+
 .extra__title h4 {
     font-size: 1.6rem;
     padding: 1.5rem 1.6rem;
@@ -466,6 +501,19 @@
     flex-direction: row;
     justify-content: space-between;
     padding: 1rem;
+    position: relative;
+}
+
+.sublist-account::before {
+    font-family: 'light';
+    content: '\f00c';
+    font-size: 1rem;
+    padding: .2rem;
+    position: absolute;
+    border-radius: 50%;
+    background-color: var(--color-ordinary);
+    bottom: 1rem;
+    left: 5rem;
 }
 
 .sublist-account img {
@@ -514,10 +562,12 @@
     font-size: 1.3rem;
     font-weight: 400;
 }
-.tablist__history{
-z-index: 400;
+
+.tablist__history {
+    z-index: 400;
 }
-.tablist__provenance{
+
+.tablist__provenance {
     font-size: 1.4rem;
     font-weight: 400;
     color: var(--color-text-secondary);
