--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -153,7 +153,7 @@ a {
     padding: 0 1rem;
 }
 
-.container >svg {
+.container>svg {
     position: absolute;
     top: -10rem;
 }
@@ -270,6 +270,7 @@ a {
     background-color: var(--color-primary);
     border: .2rem solid var(--color-accent);
 
+    cursor: p;
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -332,4 +333,72 @@ a {
 .scroll__btn-show {
     opacity: 1;
     transform: translateY(0rem);
+}
+
+/* loader */
+
+
+.preloader {
+    overflow: hidden;
+    position: fixed;
+    width: 50%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    
+}
+
+.preloader .bar {
+    position: relative;
+    height: .2rem;
+    width: 60rem;
+    margin: 0 auto;
+    background: var(--color-ordinary);
+    margin-top: 15rem;
+}
+
+.preloader .circle {
+    position: absolute;
+    top: -3rem;
+    margin-left: -3rem;
+    height: 6rem;
+    width: 6rem;
+    left: 0;
+    background: var(--color-ordinary);
+    border-radius: 30%;
+    animation: loader 5s infinite;
+}
+
+.preloader p {
+    position: absolute;
+    top: -2.5rem;
+    right: -8.5rem;
+    text-transform: uppercase;
+    color: var(--color-primary);
+    font-family: helvetica, sans-serif;
+    font-weight: bold;
+}
+
+@keyframes loader {
+    0% {
+        left: 0;
+    }
+
+    50% {
+        left: 100%;
+        transform: rotate(450deg);
+        width: 15rem;
+        height: 15rem;
+    }
+
+    75% {
+        left: 100%;
+        transform: rotate(450deg);
+        width: 15rem;
+        height: 15rem;
+    }
+
+    100% {
+        right: 100%;
+    }
 }
